--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Visualize the latest job trends in the IT job market in Mauritius. 
+      content="Visualize the latest job trends in the IT job market in Turkey.
     "
     />
     <title>ITJobMeter</title>
